--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
    <style>
     html, body{
         font-size: 14px;
+        background-color: #e0f7fa;
     }
+    
     .button-container {
         display: flex;
         align-items: center;
@@ -54,7 +56,7 @@
             <button class="btn btn-link text-dark" onclick="closeWindow()"><i class="fas fa-times"></i></button>
         </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -82,7 +84,7 @@
                 <label for="wb" class="col-form-label">WB</label>
             </div>
             <div class="col-auto" style="width: 80px;">
-                <input type="text" id="wb" class="form-control" placeholder="0">
+                <input type="text" id="wb" class="form-control bg-transparent" placeholder="0">
             </div>
         </div>
     </div>
@@ -92,13 +94,13 @@
             <div class="form-group row">
                 <label for="gatePassNo" class="col-sm-2 col-form-label">Gate Pass No.</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="gatePassNo" placeholder="Enter Gate Pass No.">
+                    <input type="text" class="form-control bg-transparent" id="gatePassNo" placeholder="Enter Gate Pass No.">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="inOut" class="col-sm-2 col-form-label">IN/OUT</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="inOut">
+                    <select class="form-control bg-transparent" id="inOut">
                         <option value="">Select</option>
                         <option value="IN">IN</option>
                         <option value="OUT">OUT</option>
@@ -108,7 +110,7 @@
             <div class="form-group row">
                 <label for="doNo" class="col-sm-2 col-form-label">DO No.</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="doNo">
+                    <select class="form-control bg-transparent" id="doNo">
                         <option value="">Select</option>
                         <option value="DO1">DO1</option>
                         <option value="DO2">DO2</option>
@@ -119,7 +121,7 @@
             <div class="form-group row">
                 <label for="supplier" class="col-sm-2 col-form-label">Supplier</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="supplier">
+                    <select class="form-control bg-transparent" id="supplier">
                         <option value="">Select</option>
                         <option value="Supplier1">Supplier1</option>
                         <option value="Supplier2">Supplier2</option>
@@ -130,7 +132,7 @@
             <div class="form-group row">
                 <label for="product" class="col-sm-2 col-form-label">Product</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="product">
+                    <select class="form-control bg-transparent" id="product">
                         <option value="">Select</option>
                         <option value="Product1">Product1</option>
                         <option value="Product2">Product2</option>
@@ -141,7 +143,7 @@
             <div class="form-group row">
                 <label for="qtyRemaining" class="col-sm-2 col-form-label">QTY Remaining</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" id="qtyRemaining" placeholder="Enter QTY Remaining">
+                    <input type="number" class="form-control bg-transparent" id="qtyRemaining" placeholder="Enter QTY Remaining">
                 </div>
             </div>
 
@@ -149,33 +151,33 @@
             <div class="form-group row">
                 <button class="btn btn-info btn-small mb-1 p-0" id="grossWeight" style="width: 80px; height: 35px;">Gross Weight</button>
                 <div class="col-sm-5">
-                    <input type="text" class="form-control" id="grossWeight" placeholder="Enter Gross Weight" oninput="calculateNetWeight()">
+                    <input type="text" class="form-control bg-transparent" id="grossWeight" placeholder="Enter Gross Weight" oninput="calculateNetWeight()">
                 </div>
                 <div class="col-sm-5">
                     <button class="btn btn-success btn-small mb-1" id="backupGrossWeight">Backup</button>
-                    <input type="datetime-local" class="form-control" id="grossWeightDateTime" placeholder="Date/Time">
+                    <input type="datetime-local" class="form-control bg-transparent" id="grossWeightDateTime" placeholder="Date/Time">
                  
                 </div>
             </div>
             <div class="form-group row">
                 <button class="btn btn-info btn-small mb-1 p-0" id="tareWeight" style="width: 80px; height: 35px;">Tare Weight</button>
                 <div class="col-sm-5">
-                    <input type="text" class="form-control" id="tareWeight" placeholder="Enter Tare Weight" oninput="calculateNetWeight()">
+                    <input type="text" class="form-control bg-transparent" id="tareWeight" placeholder="Enter Tare Weight" oninput="calculateNetWeight()">
                 </div>
                 <div class="col-sm-5">
-                    <input type="datetime-local" class="form-control" id="tareWeightDateTime" placeholder="Date/Time">
+                    <input type="datetime-local" class="form-control bg-transparent" id="tareWeightDateTime" placeholder="Date/Time">
                 </div>
             </div>
             <div class="form-group row">
                 <button class="btn btn-info btn-small mb-1 p-0" id="netWeight" style="width: 80px; height: 35px;">Net Weight</button>
                 <div class="col-sm-5">
-                    <input type="text" class="form-control" id="netWeight" placeholder="Enter Net Weight">
+                    <input type="text" class="form-control bg-transparent" id="netWeight" placeholder="Enter Net Weight">
                 </div>
             </div>
             <div class="form-group row mt-1 ml-5">
                 <div class="col-sm-10">
                     <p class="mt-4 ml-5">Weighbridge Weight Display</p>
-                    <textarea class="form-control" id="additionalComments" rows="5" placeholder="Enter any additional comments here..." style="width: 300px;"></textarea>
+                    <textarea class="form-control bg-transparent" id="additionalComments" rows="5" placeholder="Enter any additional comments here..." style="width: 300px;"></textarea>
                 </div>
             </div>
         </div>
@@ -186,13 +188,13 @@
             <div class="form-group row">
                 <label for="weightDiff" class="col-sm-2 col-form-label">Weight Diff</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="weightDiff" placeholder="Enter Weight Diff">
+                    <input type="text" class="form-control bg-transparent" id="weightDiff" placeholder="Enter Weight Diff">
                 </div>
             </div>
             <div class="form-group row">
-                <label for="transporter" class="col-sm-2 col-form-label">Transporter</label>
+                <label for="transporter" class="col-sm-2 col-form-label bg-transparent">Transporter</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="transporter">
+                    <select class="form-control bg-transparent" id="transporter">
                         <option value="">Select</option>
                         <option value="Transporter1">Transporter1</option>
                         <option value="Transporter2">Transporter2</option>
@@ -203,7 +205,7 @@
             <div class="form-group row">
                 <label for="sources" class="col-sm-2 col-form-label">Sources</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="sources">
+                    <select class="form-control bg-transparent" id="sources">
                         <option value="">Select</option>
                         <option value="Source1">Source1</option>
                         <option value="Source2">Source2</option>
@@ -214,43 +216,43 @@
             <div class="form-group row">
                 <label for="wclGatePass" class="col-sm-2 col-form-label">WCL GatePass</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="wclGatePass" placeholder="Enter WCL GatePass">
+                    <input type="text" class="form-control bg-transparent" id="wclGatePass" placeholder="Enter WCL GatePass">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="wclDate" class="col-sm-2 col-form-label">WCL Date</label>
                 <div class="col-sm-10">
-                    <input type="date" class="form-control" id="wclDate">
+                    <input type="date" class="form-control bg-transparent" id="wclDate">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="wclOutTime" class="col-sm-2 col-form-label">WCL OutTime</label>
                 <div class="col-sm-10">
-                    <input type="time" class="form-control" id="wclOutTime">
+                    <input type="time" class="form-control bg-transparent" id="wclOutTime">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="wclGrossWt" class="col-sm-2 col-form-label">WCL Gross Wt</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="wclGrossWt" placeholder="Enter WCL Gross Wt">
+                    <input type="text" class="form-control bg-transparent" id="wclGrossWt" placeholder="Enter WCL Gross Wt">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="wclTareWt" class="col-sm-2 col-form-label">WCL Tare Wt</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="wclTareWt" placeholder="Enter WCL Tare Wt">
+                    <input type="text" class="form-control bg-transparent" id="wclTareWt" placeholder="Enter WCL Tare Wt">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="wcl NetWt" class="col-sm-2 col-form-label">WCL Net Wt</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="wclNetWt" placeholder="Enter WCL Net Wt">
+                    <input type="text" class="form-control bg-transparent" id="wclNetWt" placeholder="Enter WCL Net Wt">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="grade" class="col-sm-2 col-form-label">Grade</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="grade">
+                    <select class="form-control bg-transparent" id="grade">
                         <option value="">Select</option>
                         <option value="Grade1">Grade1</option>
                         <option value="Grade2">Grade2</option>
@@ -261,7 +263,7 @@
             <div class="form-group row">
                 <label for="remarks" class="col-sm-2 col-form-label">Remarks</label>
                 <div class="col-sm-10">
-                    <select class="form-control" id="remarks">
+                    <select class="form-control bg-transparent" id="remarks">
                         <option value="">Select</option>
                         <option value="Remark1">Remark1</option>
                         <option value="Remark2">Remark2</option>
@@ -279,30 +281,30 @@
             <div class="form-group row">
                 <label for="siteName" class="col-sm-2 col-form-label">Site Name</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="siteName" placeholder="Enter Site Name">
+                    <input type="text" class="form-control bg-transparent" id="siteName" placeholder="Enter Site Name">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="truckNo" class="col-sm-2 col-form-label">Truck No.</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="truckNo" placeholder="Enter Truck No.">
+                    <input type="text" class="form-control bg-transparent" id="truckNo" placeholder="Enter Truck No.">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="panNo" class="col-sm-2 col-form-label">PAN No.</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="panNo" placeholder="Enter PAN No.">
+                    <input type="text" class="form-control bg-transparent" id="panNo" placeholder="Enter PAN No.">
                 </div>
             </div>
             <div class="form-group row">
                 <label for="gstinNo" class="col-sm-2 col-form-label">GSTIN No.</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="gstinNo" placeholder="Enter GSTIN No.">
+                    <input type="text" class="form-control bg-transparent" id="gstinNo" placeholder="Enter GSTIN No.">
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-sm-10">
-                    <textarea class="form-control" id="additionalComments" rows="22" placeholder="Enter any additional comments here..." style="width: 480px;"></textarea>
+                    <textarea class="form-control bg-transparent" id="additionalComments" rows="22" placeholder="Enter any additional comments here..." style="width: 480px;"></textarea>
                 </div>
             </div>
             </div>
