--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             font-size: 0.9rem;
             margin-bottom: 20px;
         }
+        
     </style>
 </head>
 <body>
@@ -83,13 +84,13 @@
                     <i class="fas fa-desktop mt-3"></i> <!-- Computer Icon -->
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="weighment.html">Weighment</a>
+                    <a class="nav-link text-dark" href="#">Weighment</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="help.html">Help</a>
+                    <a class="nav-link text-dark" href="#">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" href="display_report.html">Display Report</a>
+                    <a class="nav-link text-dark" href="#">Display Report</a>
                 </li>
             </ul>
         </div>
