--- a/login.html
+++ b/login.html
@@ -92,7 +92,7 @@
             // Simple validation
             if (username && password && siteName) {
                 // Redirect to "third.html"
-                window.location.href = 'index.html';
+                window.location.href = 'first2.html';
             } else {
                 alert('Please fill in all fields.');
             }
