--- a/login.html
+++ b/login.html
@@ -59,8 +59,8 @@
         </div>
 
         <div class="form-group mt-3">
-            <label for="siteName">Site Name</label>
-            <input type="text" class="form-control" id="siteName" required>
+            <label for="siteName">Selected Site</label>
+            <input type="text" class="form-control" id="siteName" readonly>
         </div>
     </div>
 
@@ -82,6 +82,12 @@
         // Call updateTime and updateDate every second
         setInterval(updateTime, 1000);
         updateDate();
+
+        // Retrieve the selected site name from localStorage
+        const selectedSite = localStorage.getItem('selectedSite');
+        if (selectedSite) {
+            document.getElementById('siteName').value = selectedSite; // Set the site name in the input field
+        }
 
         // Handle login button click
         document.getElementById('loginBtn').onclick = function() {
