--- a/index.html
+++ b/index.html
@@ -6,31 +6,55 @@
     <title>Select Site</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        html, body{
-        font-size: 14px;
-        background-color: #e0f7fa;
-    }
+        html, body {
+            font-size: 14px;
+            background-color: #e0f7fa;
+            height: 100vh; /* Set height to full viewport */
+            margin: 0; /* Remove default margin */
+        }
+        .container {
+            display: flex;
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            height: 100%; /* Full height of the viewport */
+        }
+        .hover-box {
+            transition: transform 0.3s ease, background-color 0.3s ease;
+            padding: 20px;
+            border-radius: 5px;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 600px;
+        }
+        .hover-box:hover {
+            transform: scale(1.05);
+            background-color: #b2ebf2; /* Change background color on hover */
+        }
     </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="form-group">
-            <label for="siteSelect">Select Site</label>
-            <select class="form-control bg-transparent" id="siteSelect">
-                <option value="" disabled selected>Select a site</option>
-                <option value="site1">Site 1</option>
-                <option value="site2">Site 2</option>
-                <option value="site3">Site 3</option>
-                <option value="site4">Site 4</option>
-            </select>
+    <div class="container">
+        <div class="hover-box">
+            <div class="form-group">
+                <label for="siteSelect" class="font-weight-bold">Select Site</label>
+                <select class="form-control bg-transparent" id="siteSelect">
+                    <option value="" disabled selected>Select a site</option>
+                    <option value="site1">Site 1</option>
+                    <option value="site2">Site 2</option>
+                    <option value="site3">Site 3</option>
+                    <option value="site4">Site 4</option>
+                </select>
+            </div>
+            <button type="button" class="btn btn-primary w-25 font-weight-bold" id="okBtn">OK</button>
         </div>
-        <button type="button" class="btn btn-primary" id="okBtn">OK</button>
     </div>
 
     <script>
         document.getElementById('okBtn').onclick = function() {
             const selectedSite = document.getElementById('siteSelect').value;
             if (selectedSite) {
+                // Store the selected site name in localStorage
+                localStorage.setItem('selectedSite', selectedSite);
                 window.location.href = 'login.html';
             } else {
                 alert('Please select a site.');
