--- a/grouping_2.html
+++ b/grouping_2.html
@@ -30,7 +30,7 @@
         <h1 class="text-center">Grouping Report</h1>
         <div class="form-row mt-5">
             <div class="form-group col-md-6">
-                <label for="siteName">Site Name : </label>
+                <label for="sitename">Site Name : </label>
                 <div class="input-group">
                     <input type="text" class="form-control bg-transparent" id="siteName" readonly>
                 </div>
@@ -48,7 +48,7 @@
         </div>
 
         <div class="report-box">
-            <h4 class="text-center">Product/Material Wise Report</h4>
+            <h4 class="text-center">Material Wise Report</h4>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="report-box">
-            <h4 class="text-center">Customer Wise Report</h4>
+            <h4 class="text-center">Supplier Wise Report</h4>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -83,13 +83,13 @@
                 <div class="input-group">
                     <input type="date" class="form-control w-75 bg-transparent" id="toDate">
                     <div class="input-group-append">
-                        <button class="btn btn-outline-primary" type="button">MS Excel</button>
+                        <button class="btn btn-outline-primary bg-transparent" type="button">MS Excel</button>
                     </div>
                 </div>
             </div>
         </div>
         <div class="report-box">
-            <h4 class="text-center">Customer/Transporter Wise Report</h4>
+            <h4 class="text-center">Supplier/Transport Wise</h4>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -110,12 +110,12 @@
             </div>
         </div>
         <div class="report-box">
-            <h4 class="text-center">Single Customer/Transporter Wise Report</h4>
+            <h4 class="text-center">Single Supplier/Transport Wise</h4>
         </div>
             <div class="input-group-append">
-                <label class="m-4" for="nameofcustomer">Name of Customer : </label>
+                <label class="m-4" for="nameofcustomer">Name of Supplier : </label>
                 <select class="form-control w-50 m-3 bg-transparent" id="nameofcustomer">
-                    <option value="" disabled selected>Select Customer Name</option>
+                    <option value="" disabled selected>Select Supplier Name</option>
                     <option value="report1">Report 1</option>
                     <option value="report2">Report 2</option>
                     <option value="report3">Report 3</option>
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="report-box">
-            <h4 class="text-center">Single Customer/Material Wise Report</h4>
+            <h4 class="text-center">Single Supplier/Material Wise Report</h4>
         </div>
         <div class="input-group-append">
             <label class="m-4" for="nameofcustomer">Name of Customer : </label>
@@ -170,7 +170,7 @@
             </div>
         </div>
         <div class="report-box">
-            <h4 class="text-center">Single Material/Customer Wise Report</h4>
+            <h4 class="text-center">Single Material/Supplier Wise Report</h4>
         </div>
         <div class="input-group-append">
             <label class="m-4" for="nameofcustomer">Material : </label>
