--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
             <div class="form-group">
                 <label for="siteSelect" class="font-weight-bold">Select Site</label>
                 <select class="form-control bg-transparent" id="siteSelect">
-                    <option value="" disabled selected>Select a site</option>
-                    <option value="site1">Site 1</option>
-                    <option value="site2">Site 2</option>
-                    <option value="site3">Site 3</option>
-                    <option value="site4">Site 4</option>
+                    <option value="" disabled selected>Select a Site</option>
+                    <option value="Ghuggus">Ghuggus</option>
+                    <option value="Gondegaon">Gondegaon</option>
+                    <option value="Majri">Majri</option>
+                    <option value="Pimpalgaon">Pimpalgaon</option>
+                    <option value="Pimpalgaon Siding">Pimpalgaon Siding</option>
+                    <option value="Rajur">Rajur</option>
+                    <option value="Sasti">Sasti</option>
+                    <option value="Tadali">Tadali</option>
+                    <option value="Wani">Wani</option>
                 </select>
             </div>
             <button type="button" class="btn btn-primary w-25 font-weight-bold" id="okBtn">OK</button>
