--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Login Form</h2>
+        <h2>Login</h2>
         <form id="loginForm">
             <div class="form-group">
                 <label for="username">Username</label>
