--- a/product_report.html
+++ b/product_report.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Report</title>
+    <title>Product Report</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
+             body{
+                background-color: #e0f7fa;
+             }
+
         .report-box {
             border: 3px solid #007bff; /* Bootstrap primary color */
             padding: 20px;
@@ -19,20 +23,11 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="font-weight-bold text-center">Transporter Report</h1>
-        <div class="form-group">
-            <label for="inout">IN/OUT</label>
-            <select class="form-control w-25" id="inout">
-                <option value="" disabled selected>Select</option>
-                <option value="IN">IN</option>
-                <option value="OUT">OUT</option>
-            </select>
-        </div>
-
+        <h1 class="text-center mb-5 font-weight-bold">Product Report</h1>
         <div class="report-box">
             <div class="form-group">
-                <label for="reportDropdown">Select Report Type</label>
-                <select class="form-control" id="reportDropdown">
+                <label for="reportDropdown">Product Report</label>
+                <select class="form-control bg-transparent" id="reportDropdown">
                     <option value="" disabled selected>Select a report type</option>
                     <option value="report1">Report 1</option>
                     <option value="report2">Report 2</option>
@@ -42,11 +37,11 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="fromDate">From Date</label>
-                    <input type="date" class="form-control" id="fromDate">
+                    <input type="date" class="form-control bg-transparent" id="fromDate">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="toDate">To Date</label>
-                    <input type="date" class="form-control" id="toDate">
+                    <input type="date" class="form-control bg-transparent" id="toDate">
                 </div>
             </div>
             <button type="button" class="btn btn-primary" id="okBtn">OK</button>
@@ -54,36 +49,36 @@
 
         <div class="form-group">
             <label for="siteName">Site Name</label>
-            <input type="text" class="form-control" id="siteName" readonly>
+            <input type="text" class="form-control bg-transparent" id="siteName" readonly>
         </div>
 
         <div class="form-group">
             <label for="reportDetails">Report Details</label>
-            <textarea class="form-control textarea-large" id="reportDetails" placeholder="Enter report details..."></textarea>
+            <textarea class="form-control textarea-large bg-transparent" id="reportDetails" placeholder="Enter report details..."></textarea>
         </div>
 
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label for="totalEntry">Total Entry</label>
-                <input type="number" class="form-control" id="totalEntry">
+                <input type="number" class="form-control bg-transparent" id="totalEntry">
             </div>
             <div class="form-group col-md-3">
                 <label for="gross">Gross</label>
-                <input type="number" class="form-control" id="gross">
+                <input type="number" class="form-control bg-transparent" id="gross">
             </div>
             <div class="form-group col-md-3">
                 <label for="tare">Tare</label>
-                <input type="number" class="form-control" id="tare">
+                <input type="number" class="form-control bg-transparent" id="tare">
             </div>
             <div class="form-group col-md-3">
                 <label for="net">Net</label>
-                <input type="number" class="form-control" id="net">
+                <input type="number" class="form-control bg-transparent" id="net">
             </div>
         </div>
 
         <div class="form-group">
             <label for="total">Total</label>
-            <input type="number" class="form-control" id="total">
+            <input type="number" class="form-control bg-transparent" id="total">
         </div>
 
         <div class="d-flex justify-content-between">
@@ -105,7 +100,7 @@
             const toDate = document.getElementById('toDate').value;
 
             if (!reportType || !fromDate || !toDate) {
-                alert('Please fill in all fields in the Customer Report section.');
+                alert('Please fill in all fields in the Product Report section.');
             } else {
                 alert('Report generated successfully!'); // Placeholder for actual functionality
             }
@@ -115,7 +110,7 @@
             if (confirm('Are you sure you want to close?')) {
                 window.close(); // This will only work if the page was opened via window.open()
             }
-        };
+ };
 
         document.getElementById('printReportBtn').onclick = function() {
             // Placeholder for print functionality
