--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
             // Simple validation
             if (username && password && siteName) {
                 // Redirect to "third.html"
-                window.location.href = 'first2.html';
+                window.location.href = 'first2.php';
             } else {
                 alert('Please fill in all fields.');
             }
