--- a/product_report.html
+++ b/product_report.html
@@ -6,9 +6,9 @@
     <title>Product Report</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-             body{
-                background-color: #e0f7fa;
-             }
+        body {
+            background-color: #e0f7fa;
+        }
 
         .report-box {
             border: 3px solid #007bff; /* Bootstrap primary color */
@@ -16,6 +16,7 @@
             border-radius: 8px;
             margin-bottom: 20px;
         }
+
         .textarea-large {
             height: 150px; /* Adjust the height as needed */
         }
@@ -25,26 +26,23 @@
     <div class="container mt-5">
         <h1 class="text-center mb-5 font-weight-bold">Product Report</h1>
         <div class="report-box">
-            <div class="form-group">
-                <label for="reportDropdown">Product Report</label>
-                <select class="form-control bg-transparent" id="reportDropdown">
-                    <option value="" disabled selected>Select a report type</option>
-                    <option value="report1">Report 1</option>
-                    <option value="report2">Report 2</option>
-                    <option value="report3">Report 3</option>
-                </select>
-            </div>
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label for="fromDate">From Date</label>
-                    <input type="date" class="form-control bg-transparent" id="fromDate">
+            <form action="product.php" method="POST" id="reportForm">
+                <div class="form-group">
+                    <label for="product">Product Report</label>
+                    <input type="text" class="form-control bg-transparent" id="product" name="product" required>
                 </div>
-                <div class="form-group col-md-6">
-                    <label for="toDate">To Date</label>
-                    <input type="date" class="form-control bg-transparent" id="toDate">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="fromDate">From Date</label>
+                        <input type="date" class="form-control bg-transparent" id="fromDate" name="fromDate" required>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="toDate">To Date</label>
+                        <input type="date" class="form-control bg-transparent" id="toDate" name="toDate" required>
+                    </div>
                 </div>
-            </div>
-            <button type="button" class="btn btn-primary" id="okBtn">OK</button>
+                <button type="submit" class="btn btn-primary">OK</button>
+            </form>
         </div>
 
         <div class="form-group">
@@ -72,7 +70,7 @@
             </div>
             <div class="form-group col-md-3">
                 <label for="net">Net</label>
-                <input type="number" class="form-control bg-transparent" id="net">
+                <input type="number" class="form-control bg-transparent" id="net" readonly>
             </div>
         </div>
 
@@ -88,36 +86,53 @@
     </div>
 
     <script>
+
+           
         const selectedSite = localStorage.getItem('selectedSite');
         if (selectedSite) {
             document.getElementById('siteName').value = selectedSite; // Set the site name in the input field
         }
 
+       // document.getElementById('okBtn').onclick = function() {
+        //    const reportType = document.getElementById('reportDropdown').value;
+         //   const fromDate = document.getElementById('fromDate').value;
+          //  const toDate = document.getElementById('toDate').value;
 
-        document.getElementById('okBtn').onclick = function() {
-            const reportType = document.getElementById('reportDropdown').value;
-            const fromDate = document.getElementById('fromDate').value;
-            const toDate = document.getElementById('toDate').value;
-
-            if (!reportType || !fromDate || !toDate) {
-                alert('Please fill in all fields in the Product Report section.');
-            } else {
-                alert('Report generated successfully!'); // Placeholder for actual functionality
-            }
-        };
+          //  if (!reportType || !fromDate || !toDate) {
+          //      alert('Please fill in all fields in the Product Report section.');
+           // } else {
+           //     alert('Report generated successfully!'); // Placeholder for actual functionality
+           // }
+       // };
 
         document.getElementById('closeBtn').onclick = function() {
             if (confirm('Are you sure you want to close?')) {
                 window.close(); // This will only work if the page was opened via window.open()
             }
- };
+        };
 
         document.getElementById('printReportBtn').onclick = function() {
             // Placeholder for print functionality
             alert('Print Excel Report functionality is not implemented yet.');
         };
+
+        // Function to calculate net weight
+        function calculateNetWeight() {
+            const grossWeight = parseFloat(document.getElementById('gross').value) || 0;
+            const tareWeight = parseFloat(document.getElementById('tare').value) || 0;
+            const netWeight = grossWeight - tareWeight;
+            document.getElementById('net').value = netWeight.toFixed(2); // Set net weight with 2 decimal places
+        }
+
+        // Add event listeners to gross and tare input fields
+        document.getElementById('gross').addEventListener('input', calculateNetWeight);
+        document.getElementById('tare').addEventListener('input', calculateNetWeight);
+
+
+       
     </script>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
