--- a/supplier_2.html
+++ b/supplier_2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Report</title>
+    <title>Supplier Report</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
          body {
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-xl-center mb-5 font-weight-bold">Supplier Report</h1>
+        <h1 class="text-center mb-5 font-weight-bold">Supplier Report</h1>
         <div class="report-box">
             <div class="form-group">
                 <label for="reportDropdown">Supplier Name</label>
@@ -46,7 +46,7 @@
             <button type="button" class="btn btn-primary" id="okBtn">OK</button>
         </div>
 
-        <div class="form-group">
+        <div class="form -group">
             <label for="siteName">Site Name</label>
             <input type="text" class="form-control bg-transparent" id="siteName" readonly>
         </div>
@@ -71,7 +71,7 @@
             </div>
             <div class="form-group col-md-3">
                 <label for="net">Net</label>
-                <input type="number" class="form-control bg-transparent" id="net">
+                <input type="number" class="form-control bg-transparent" id="net" readonly>
             </div>
         </div>
 
@@ -92,14 +92,13 @@
             document.getElementById('siteName').value = selectedSite; // Set the site name in the input field
         }
 
-
         document.getElementById('okBtn').onclick = function() {
             const reportType = document.getElementById('reportDropdown').value;
             const fromDate = document.getElementById('fromDate').value;
             const toDate = document.getElementById('toDate').value;
 
             if (!reportType || !fromDate || !toDate) {
-                alert('Please fill in all fields in the Customer Report section.');
+                alert('Please fill in all fields in the Supplier Report section.');
             } else {
                 alert('Report generated successfully!'); // Placeholder for actual functionality
             }
@@ -115,6 +114,18 @@
             // Placeholder for print functionality
             alert('Print Excel Report functionality is not implemented yet.');
         };
+
+        // Function to calculate net weight
+        function calculateNetWeight() {
+            const grossWeight = parseFloat(document.getElementById('gross').value) || 0;
+            const tareWeight = parseFloat(document.getElementById('tare').value) || 0;
+            const netWeight = grossWeight - tareWeight;
+            document.getElementById('net').value = netWeight.toFixed(2); // Set net weight with 2 decimal places
+        }
+
+        // Add event listeners to gross and tare input fields
+        document.getElementById('gross').addEventListener('input', calculateNetWeight);
+        document.getElementById('tare').addEventListener('input', calculateNetWeight);
     </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
