--- a/transportwise.html
+++ b/transportwise.html
@@ -47,7 +47,7 @@
                     <label for="fromDate">From Date</label>
                     <input type="date" class="form-control bg-transparent" id="fromDate">
                 </div>
-                <div class="form-group col-md-6">
+                <div class <div class="form-group col-md-6">
                     <label for="toDate">To Date</label>
                     <input type="date" class="form-control bg-transparent" id="toDate">
                 </div>
@@ -79,7 +79,7 @@
             </div>
             <div class="form-group col-md-3">
                 <label for="net">Net</label>
-                <input type="number" class="form-control bg-transparent" id="net">
+                <input type="number" class="form-control bg-transparent" id="net" readonly>
             </div>
         </div>
 
@@ -99,7 +99,6 @@
         if (selectedSite) {
             document.getElementById('siteName').value = selectedSite; // Set the site name in the input field
         }
-
 
         document.getElementById('okBtn').onclick = function() {
             const reportType = document.getElementById('reportDropdown').value;
@@ -123,6 +122,18 @@
             // Placeholder for print functionality
             alert('Print Excel Report functionality is not implemented yet.');
         };
+
+        // Function to calculate net weight
+        function calculateNetWeight() {
+            const grossWeight = parseFloat(document.getElementById('gross').value) || 0;
+            const tareWeight = parseFloat(document.getElementById('tare').value) || 0;
+            const netWeight = grossWeight - tareWeight;
+            document.getElementById('net').value = netWeight.toFixed(2); // Set net weight with 2 decimal places
+        }
+
+        // Add event listeners to gross and tare input fields
+        document.getElementById('gross').addEventListener('input', calculateNetWeight);
+        document.getElementById('tare').addEventListener('input', calculateNetWeight);
     </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
